horizontal scroll fixed

--- a/src/styles/blocks/general-container.scss
+++ b/src/styles/blocks/general-container.scss
@@ -2,4 +2,5 @@
   width: 100%;
   max-width: 1440px;
   align-self: center;
+  overflow: hidden;
 }
